--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
 
     <button id="connect">Connect Device</button>
     
-    <h3>Settings</h3>
-    <label>Standard Firmware: <input type="file" id="fw_standard" accept=".bin"></label><br>
-    <label>Expo Firmware: <input type="file" id="fw_expo" accept=".bin"></label><br>
-    <label>Clean WiFi Firmware: <input type="file" id="fw_wifi" accept=".bin"></label><br>
-    
     <h3>Flashing Options</h3>
-    <button id="flash_standard" disabled>Flash Standard Firmware</button>
-    <button id="flash_expo" disabled>Flash Expo Firmware</button>
-    <button id="flash_wifi" disabled>Flash Clean WiFi Firmware</button>
+    <label>Select Firmware Type:</label>
+    <select id="fw_type">
+        <option value="">Loading...</option>
+    </select>
+    <button id="flash" disabled>Flash Selected Firmware</button>
 
     <h3>WiFi Setup</h3>
     <input type="text" id="wifi_ssid" placeholder="WiFi SSID">
@@ -29,41 +26,76 @@
 
     <script>
         let device;
+        let firmwareList = {}; 
+
+        // Fetch firmware list from hosted JSON file
+        async function loadFirmwareList() {
+            const response = await fetch("https://yourhosting.com/firmware-list.json");
+            firmwareList = await response.json();
+
+            const select = document.getElementById('fw_type');
+            select.innerHTML = ""; 
+
+            Object.keys(firmwareList).forEach(key => {
+                let option = document.createElement("option");
+                option.value = key;
+                option.textContent = key;
+                select.appendChild(option);
+            });
+        }
+
+        // Auto-detect when Photon is connected
+        navigator.usb.getDevices().then(devices => {
+            if (devices.length > 0) {
+                device = devices[0];
+                document.getElementById('status').innerText = "Device auto-detected!";
+                enableButtons();
+            }
+        });
 
         document.getElementById('connect').addEventListener('click', async () => {
             try {
-                device = await navigator.usb.requestDevice({ 
-                    filters: [{ vendorId: 0x2B04 }] // Particle Vendor ID
-                });
+                device = await navigator.usb.requestDevice({ filters: [{ vendorId: 0x2B04 }] });
                 await device.open();
                 document.getElementById('status').innerText = "Device connected!";
-                document.querySelectorAll("button[id^='flash_'], #set_wifi").forEach(btn => btn.disabled = false);
+                enableButtons();
             } catch (error) {
                 document.getElementById('status').innerText = "Connection failed: " + error;
             }
         });
 
-        async function flashFirmware(fileInput) {
-            if (!device) return alert("No device connected!");
-            let file = fileInput.files[0];
-            if (!file) return alert("Please select a .bin file!");
-
-            let firmwareData = await file.arrayBuffer();
-
-            try {
-                await device.selectConfiguration(1);
-                await device.claimInterface(0);
-                await device.transferOut(2, new Uint8Array(firmwareData));
-
-                document.getElementById('status').innerText = "Flashing complete!";
-            } catch (error) {
-                document.getElementById('status').innerText = "Flashing failed: " + error;
-            }
+        function enableButtons() {
+            document.getElementById('flash').disabled = false;
+            document.getElementById('set_wifi').disabled = false;
         }
 
-        document.getElementById('flash_standard').addEventListener('click', () => flashFirmware(document.getElementById('fw_standard')));
-        document.getElementById('flash_expo').addEventListener('click', () => flashFirmware(document.getElementById('fw_expo')));
-        document.getElementById('flash_wifi').addEventListener('click', () => flashFirmware(document.getElementById('fw_wifi')));
+        async function flashFirmware() {
+            if (!device) return alert("No device connected!");
+
+            let selectedFirmware = document.getElementById('fw_type').value;
+            if (!firmwareList[selectedFirmware]) return alert("Invalid selection!");
+
+            let firmwareFiles = firmwareList[selectedFirmware];
+
+            for (let fileUrl of firmwareFiles) {
+                let response = await fetch(fileUrl);
+                let firmwareData = await response.arrayBuffer();
+
+                try {
+                    await device.selectConfiguration(1);
+                    await device.claimInterface(0);
+                    await device.transferOut(2, new Uint8Array(firmwareData));
+                    document.getElementById('status').innerText = "Flashed: " + fileUrl;
+                } catch (error) {
+                    document.getElementById('status').innerText = "Flashing failed: " + error;
+                    return;
+                }
+            }
+
+            document.getElementById('status').innerText = "Flashing complete!";
+        }
+
+        document.getElementById('flash').addEventListener('click', flashFirmware);
 
         async function setWiFi() {
             if (!device) return alert("No device connected!");
@@ -77,7 +109,6 @@
                 await device.selectConfiguration(1);
                 await device.claimInterface(0);
                 await device.transferOut(2, wifiData);
-
                 document.getElementById('status').innerText = "WiFi setup complete!";
             } catch (error) {
                 document.getElementById('status').innerText = "WiFi setup failed: " + error;
@@ -85,6 +116,10 @@
         }
 
         document.getElementById('set_wifi').addEventListener('click', setWiFi);
+
+        // Load firmware list on page load
+        loadFirmwareList();
     </script>
 </body>
 </html>
+
